===== Build 0029: 2019/02/22 =====
### Beta Version ###

*Import system:
    *Namespace, with syntax '::'

===== Build 0028: 2019/02/21 =====
### Alpha Version ###

*Import system: Module, Dot

********** SPL 1.1.0 **********
===== Build 0027: 2019/02/19 =====

*New features:
    *Added spc to produce the spl bytecode
    *SPL bytecode interpreter
    *Constant values, using keyword 'const'. Also supports for constant method of class
*New experimental feature:
    *SPL Decompiler: 'spd'
*Bug fixes:
    *Fixed that 'instanceof' not working properly when used inside class
    *Fixed that unary operator '!' not properly implemented
    *Fixed that function 'eval' returns the string itself
    *Merged spl_interpreter and spl_lib to avoid cyclic import
    *Fixed that using keyword 'this' cannot access to private attributes

********** SPL 1.0.2 **********
===== Build 0026: 2019/02/17 =====

*Performance optimization:
    *Interpreter:
        *Replace if-else with case-lookup
        *Removed wrapped boolean and null

********** SPL 1.0.1 **********
===== Build 0025: 2019/02/16 =====

*Added command line options:
    *-et for execution times of each nodes
*Bug fixes:
    *Some interpretation error caused by wrong type

********** SPL 1.0.0 **********
===== Build 0024: 2019/02/15 =====

*Added syntax:
    *for-each loop
*Bug fixes:
    *Fixed bug that catch block cannot catch native errors
    *Fixed bug that finally block was not executed if return statement in try-catch block
    *Added argument check for function call
    *Fixed bug that name ended with digit may cause error
*Added native function:
    *dir
*Added library function:
    *reduce
*Library implementation:
    *Implemented queue.LinkedList
*Structural change:
    *Moved "Exception" to library
*Optimization:
    *Semicolon at the end of a block can be omitted
    *Library functions optimization
    *Used lazy evaluation for operators '&&' and '||'
    *Added spl optimizer: