@@ -3,11 +3,10 @@ import "iterable"
 
 class S28 extends iterable::Iterable {
     value = 0;
-    function S28(x) {
-        value = x;
+    function S28() {
     }
 
-    def set(nx) {
+    def setx(nx, ny=0) {
         value = nx;
     }
 }
